--- a/HTML-CSS/EXERCICIOS/016/cor02.html
+++ b/HTML-CSS/EXERCICIOS/016/cor02.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gradiente em CSS</title>
     <style>
-        * { /*cpnfigurações globais*/
+        * { /*configurações globais*/
             height: 100%;
         }
         body {
-            background-image:linear-gradient(to top, white,blue) ;
+            background-image:linear-gradient(to bottom, #4FFFDC, #3FCCB0, #3D8577) ;
+            background-attachment: fixed;
 
         }
     </style>
